--- a/client/src/template/app.scss
+++ b/client/src/template/app.scss
@@ -1,4 +1,6 @@
 @import 'layout.scss';
 
+@import '../../node_modules/angular-material/angular-material.css';
+
 @import '../module/auth/template/index.scss';
 @import '../module/menu/template/index.scss';
