--- a/public/module/profile/template/index.html
+++ b/public/module/profile/template/index.html
@@ -1,9 +1,9 @@
 <md-card>
   <md-card-title>
     <md-card-title-text>
-      <span class="md-headline">{{user.name}}</span>
-      <span class="md-subhead">{{user.email}}</span>
-      <span class="md-subhead">{{user.balance}} Credits</span>
+      <span class="md-headline profile__name">{{user.name}}</span>
+      <span class="md-subhead profile__email">{{user.email}}</span>
+      <span class="md-subhead profile__balance">{{user.balance}} Credits</span>
     </md-card-title-text>
   </md-card-title>
   <md-card-actions layout="row" layout-align="end center">
